--- a/index.html
+++ b/index.html
@@ -334,14 +334,14 @@
                     <h2 class="section-heading">Skills</h2>
                     <h3 class="section-subheading text-muted">Software I can use professionally.</h3>
                 </div>
-                <div id= "positionproperly">
-                    <div class="col-md-4">
+                <div class="col-md-12 col-sm-12">
+                    <div class="col-md-4 col-sm-4">
                        <img src="img/WebsiteSkillsSection-02.png" >
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-4">
                        <img src="img/WebsiteSkillsSection-03.png" >
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-4">
                        <img src="img/WebsiteSkillsSection-04.png" >
                     </div>
                 </div>
