--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <h3 class="section-subheading text-muted">Send me a message.</h3>
                 </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
@@ -368,12 +368,16 @@
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
-                                </div>
+                                </div> 
                                 <div class="form-group">
                                     <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
-                                </div>
+                                </div> -->
                                 <div class="form-group">
+                                    <input type="text" readonly class="form-control" placeholder="caroline.gardiner@live.co.uk" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <!--<div class="form-group">
                                     <input type="tel" class="form-control" placeholder="Your Phone " id="phone" required data-validation-required-message="Please enter your phone number.">
                                     <p class="help-block text-danger"></p>
                                 </div>
@@ -390,11 +394,12 @@
                                 <button type="submit" class="btn btn-xl">Send Message</button>
                             </div>
                         </div>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </div>
     </section>
+
 
     <footer>
         <div class="container">
