Update to Skills Images
cropped off the bottom of the 2 outside images so they create one long
list without gams when in mobile view

--- a/index.html
+++ b/index.html
@@ -336,13 +336,13 @@
                 </div>
                 <div class="col-md-12 col-sm-12">
                     <div class="col-md-4 col-sm-4">
-                       <img src="img/WebsiteSkillsSection-02.png" >
+                       <img src="img/Website Skills Section-02.png" >
                     </div>
                     <div class="col-md-4 col-sm-4">
-                       <img src="img/WebsiteSkillsSection-03.png" >
+                       <img src="img/Website Skills Section-03.png" >
                     </div>
                     <div class="col-md-4 col-sm-4">
-                       <img src="img/WebsiteSkillsSection-04.png" >
+                       <img src="img/Website Skills Section-04.png" >
                     </div>
                 </div>
                 <!--<img class="img-responsive img-centered" src="img/skills/Website Skills Section-02.png" alt="">-->
@@ -414,14 +414,14 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+               <!-- <div class="col-md-4">
                     <ul class="list-inline quicklinks">
                         <li><a href="#">Privacy Policy</a>
                         </li>
                         <li><a href="#">Terms of Use</a>
                         </li>
                     </ul>
-                </div>
+                </div>-->
             </div>
         </div>
     </footer>
