--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
                     <h3 class="section-subheading text-muted">Send me a message.</h3>
                 </div>
             </div>
-            <!--<div class="row">
+              <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
+                        <!--<div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
@@ -372,12 +372,12 @@
                                 <div class="form-group">
                                     <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
-                                </div> -->
+                                </div> 
                                 <div class="form-group">
                                     <input type="text" readonly class="form-control" placeholder="caroline.gardiner@live.co.uk" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
-                                <!--<div class="form-group">
+                                <div class="form-group">
                                     <input type="tel" class="form-control" placeholder="Your Phone " id="phone" required data-validation-required-message="Please enter your phone number.">
                                     <p class="help-block text-danger"></p>
                                 </div>
@@ -387,11 +387,11 @@
                                     <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <button type="submit" class="btn btn-xl">caroline.gardiner@live.co.uk <a href="mailto:caroine.gardiner@live.co.uk?Subject=Hello" target="_top">Send Mail</a></button>
                             </div>
                         </div>
                     </form> -->
