--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
               <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
-                        <!--<div class="row">
+                        <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
@@ -394,7 +394,7 @@
                                 <button type="submit" class="btn btn-xl">caroline.gardiner@live.co.uk <a href="mailto:caroine.gardiner@live.co.uk?Subject=Hello" target="_top">Send Mail</a></button>
                             </div>
                         </div>
-                    </form> -->
+                    </form>
                 </div>
             </div>
         </div>
