--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Mail<a href="mailto:caroine.gardiner@live.co.uk?Subject=Hello"</a> </button>
+                                <button type="submit" class="btn btn-xl">Send Mail<a href="mailto:caroine.gardiner@live.co.uk?Subject=Hello" target="_top"></a></button>
                             </div>
                         </div>
                     </form> 
