--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <!-- <button type="submit" class="btn btn-xl">Send Mail --><a class="btn btn-xl" href="mailto:caroine.gardiner@live.co.uk?Subject=Hello" target="_top">Email Me</a><!-- </button> -->
+                                
+                                <a class="btn btn-xl" href="mailto:caroine.gardiner@live.co.uk?Subject=Hello" target="_top">Email Me</a>
                             </div>
                         </div>
                     </form> 
