Adding Visions Design

--- a/index.html
+++ b/index.html
@@ -150,10 +150,24 @@
                                 <i class="fa fa-search fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/flite1-31.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/visions-cover-33.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Flite</h4>
+                        <h4>Visions Design</h4>
+                        <p class="text-muted">Brand Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-search fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/flite1-31.png" class="img-responsive" alt="">
+                    </a>
+                        <div class="portfolio-caption">
+                        <h4>Flite App</h4>
                         <p class="text-muted">User Experience</p>
                     </div>
                 </div>
@@ -168,7 +182,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Nike</h4>
-                        <p class="text-muted">Brand Design</p>
+                        <p class="text-muted">Brand & Industrial Design</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -314,6 +328,20 @@
                                 </div>
                             </div>
                         </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/visionslogo.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Summer 2016</h4>
+                                    <h4 class="subheading">Visions Design | Designer and Social Media Manager</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Created numerous successful social media marketing campaigns and high-quality visual designs for external clients to tight deadlines.</p>
+                                </div>
+                            </div>
+                        </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>
@@ -430,7 +458,33 @@
     <!-- Portfolio Modals -->
     <!-- Use the modals below to showcase details about your portfolio projects! -->
 
-    <!-- Portfolio Modal 1 -->
+    <!-- Portfolio Modal 1 Visions-->
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Visions Design Style Guide</h2>
+                            <p class="item-intro text-muted">A set of brand and style guidelines created for Visions Design agency in Lymm, Cheshire, UK. It was created by collating all existing designs and branding material condensing it into a cohesive brand style.</p> 
+                            <img class="img-responsive img-centered" src="img/portfolio/Visions-Presentation-01.jpg" alt="">
+                            <p></p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <!-- Portfolio Modal 2 Flite-->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -456,7 +510,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 2 -->
+    <!-- Portfolio Modal 3 Nike -->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -487,7 +541,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 3 -->
+    <!-- Portfolio Modal 4 E.on -->
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -524,7 +578,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
+    <!-- Portfolio Modal 5 Crewmaster -->
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -557,7 +611,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 5 -->
+    <!-- Portfolio Modal 6 IIB-->
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -588,7 +642,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 6 Koka-->
+    <!-- Portfolio Modal 7 Koka-->
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -617,7 +671,7 @@
         </div>
     </div>
 
- <!-- Portfolio Modal 7 -->
+ <!-- Portfolio Modal 8 Scott -->
     <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
