Updates Scott job role

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>August 2014</h4>
-                                    <h4 class="subheading">Scott Safety | Intern</h4>
+                                    <h4 class="subheading">Scott Safety | Industrial Design Intern</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Gained experience working to a live brief, creating sketch models and prototypes and testing them out on sponsor users. I spent time in the safety testing labs and on the manufacturing line so was able to see product development through from concept to creation.</p>
