--- a/index.html
+++ b/index.html
@@ -150,14 +150,29 @@
                                 <i class="fa fa-search fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/visions-cover-33.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Artboard 33 copy 3.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Visions Design</h4>
                         <p class="text-muted">Brand Design</p>
                     </div>
                 </div>
+            <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-search fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/hh-cover.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Hursley House IoT</h4>
+                        <p class="text-muted">UX / Data Visualisation</p>
+                    </div>
+                </div>
+             <!--<div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -170,7 +185,7 @@
                         <h4>Flite App</h4>
                         <p class="text-muted">User Experience</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -178,7 +193,7 @@
                                 <i class="fa fa-search fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/Portfolio Site Screenshots-02.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Artboard 5.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Nike</h4>
@@ -234,7 +249,7 @@
                                 <i class="fa fa-search fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/koka.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Artboard 6.png" class="img-responsive" alt="">
 
                     </a>
                     <div class="portfolio-caption">
@@ -476,6 +491,38 @@
                             <p class="item-intro text-muted">A set of brand and style guidelines created for Visions Design agency in Lymm, Cheshire, UK. It was created by collating all existing designs and branding material condensing it into a cohesive brand style.</p> 
                             <img class="img-responsive img-centered" src="img/portfolio/Visions-Presentation-01.jpg" alt="">
                             <p></p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio Modal 9 HH-->
+    <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Hursley Living Lab</h2>
+                            <p class="item-intro text-muted">Interactive webpage to display data about the rooms within Hursley House.</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/Hursley_House_3.gif" alt="">
+                            <p> The aim of this project was to use Internet of Things technologies and IBM products to improve the experience of visiting or working at the Hursley Site and to monitor the rooms within Hursley House, IBM's Executive Briefing Centre.
+                            <br><br>
+                            The first stage of the project started with the Executive Briefing Centre in Hursley House, which is a grade 2* listed building for which there is a rigorous approval process to make any changes. This was part of the drive to use IoT technologies, which can work around these restrictions. One of the major issues with Hursley House is that it has a Victorian heating system so the rooms are often too cold or too hot.</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/Innovation Showcase Poster-1-04.png" alt="">
+                            <p>My role was to design an <a href="http://iot-living-lab.eu-gb.mybluemix.net/">interactive web page.</a> to represent the data being collected by the sensors, so the briefing centre staff could monitor the status of the rooms, and clients could see IBM and partner technologies working together to achieve an innovative solution.</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/layout_responsive_column_essentials.gif" alt="">
+                            <p> I then created a Brand and Style Guide to give to the front-end developers on the team so that we could work together to execute the designs to the highest standard. The guide specified a colour palette, typography, contained all visual assets and dictated how the page shoud respond to different displays.</p>
+                      
+                           
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
