Fixing HH Cover photo

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 <i class="fa fa-search fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/hh-cover.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Artboard 33 copy 2.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Hursley House IoT</h4>
