minor text change

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                             <img class="img-responsive img-centered" src="img/portfolio/Innovation Showcase Poster-1-04.png" alt="">
                             <p>My role was to design an <a href="http://iot-living-lab.eu-gb.mybluemix.net/">interactive web page.</a> to represent the data being collected by the sensors, so the briefing centre staff could monitor the status of the rooms, and clients could see IBM and partner technologies working together to achieve an innovative solution.</p>
                             <img class="img-responsive img-centered" src="img/portfolio/layout_responsive_column_essentials.gif" alt="">
-                            <p> I then created a Brand and Style Guide to give to the front-end developers on the team so that we could work together to execute the designs to the highest standard. The guide specified a colour palette, typography, contained all visual assets and dictated how the page shoud respond to different displays.</p>
+                            <p> I then created a Brand and Style Guide to give to the front-end developers on the team so that we could work together to execute the designs to the highest standard. The guide specified a colour palette, typography, contained all visual assets and animations and dictated how the page shoud respond to different displays.</p>
                       
                            
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
