--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             </div>
         </div>
     </section>
-<!-- Skills Section -->
+<!-- Skills Section --
       <section id="skills" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -391,7 +391,7 @@
             </div>
             
         </div>
-    </section>
+    </section> -->
     
     <!-- Contact Section -->
     <section id="contact">
